[package]
name = "revy"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5"
repng = "*"
image = "*"
mozjpeg = "0.8.24"
num_cpus = "1.13.0"
winapi = "*"
winmm-sys = "*"
user32-sys = "*"
kernel32-sys = "*"
openssl = "*"